src/rules/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM107_SIM107.py.snap
---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind:
    ReturnInTryExceptFinally: ~
  location:
    row: 9
    column: 8
  end_location:
    row: 9
    column: 18
  fix: ~
  parent: ~

