src/rules/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM108_SIM108.py.snap
---
source: src/flake8_simplify/mod.rs
expression: diagnostics
---
- kind:
    UseTernaryOperator: b = c if a else d
  location:
    row: 2
    column: 0
  end_location:
    row: 5
    column: 9
  fix:
    content: b = c if a else d
    location:
      row: 2
      column: 0
    end_location:
      row: 5
      column: 9
  parent: ~
- kind:
    UseTernaryOperator: b = cccccccccccccccccccccccccccccccccccc if a else ddddddddddddddddddddddddddddddddddddd
  location:
    row: 82
    column: 0
  end_location:
    row: 85
    column: 45
  fix:
    content: b = cccccccccccccccccccccccccccccccccccc if a else ddddddddddddddddddddddddddddddddddddd
    location:
      row: 82
      column: 0
    end_location:
      row: 85
      column: 45
  parent: ~

