src/rules/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM211_SIM211.py.snap
---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind:
    IfExprWithFalseTrue: b
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 24
  fix:
    content: not b
    location:
      row: 1
      column: 4
    end_location:
      row: 1
      column: 24
  parent: ~
- kind:
    IfExprWithFalseTrue: b != c
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 29
  fix:
    content: not b != c
    location:
      row: 3
      column: 4
    end_location:
      row: 3
      column: 29
  parent: ~
- kind:
    IfExprWithFalseTrue: b + c
  location:
    row: 5
    column: 4
  end_location:
    row: 5
    column: 28
  fix:
    content: not b + c
    location:
      row: 5
      column: 4
    end_location:
      row: 5
      column: 28
  parent: ~

