src/rules/flake8_simplify/snapshots/ruff__flake8_simplify__tests__SIM212_SIM212.py.snap
---
source: src/flake8_simplify/mod.rs
expression: checks
---
- kind:
    IfExprWithTwistedArms:
      - b
      - a
  location:
    row: 1
    column: 4
  end_location:
    row: 1
    column: 21
  fix:
    content: a if a else b
    location:
      row: 1
      column: 4
    end_location:
      row: 1
      column: 21
  parent: ~
- kind:
    IfExprWithTwistedArms:
      - b + c
      - a
  location:
    row: 3
    column: 4
  end_location:
    row: 3
    column: 25
  fix:
    content: a if a else b + c
    location:
      row: 3
      column: 4
    end_location:
      row: 3
      column: 25
  parent: ~

